Chore: + Fix header's z-index Feat: + Add banner for home page + Create constants folder

--- a/frontend/src/Layouts/DefaultLayout/components/Header/Header.scss
+++ b/frontend/src/Layouts/DefaultLayout/components/Header/Header.scss
@@ -8,6 +8,7 @@
     align-items: center;
     height: 7.5rem;
     border-bottom: 0.1rem solid var(--black);
+    z-index: 10000;
 
     &.on-scroll {
         background-color: var(--white);
